# Gtest_Tutorial

./: README.md
MyProject/: CMakeLists.txt
MyProject/include/: math_op.h
MyProject/src/: main.cpp  math_op.cpp
MyProject/test/: math_test.cpp
